--- a/lab-01-hello-r.Rmd
+++ b/lab-01-hello-r.Rmd
@@ -1,11 +1,11 @@
 ---
 title: "Lab 01 - Hello R"
-author: "Musab Isah"
-date: "1/26/2021"
+author: "Sadeem"
+date: "14/02/2021"
 output: html_document
 ---
 
-University ID: 
+University ID: 2201001438
 
 ### Load packages
 
